xs/modules/parsers/parser-hdbview/src/main/java/com/codbex/kronos/parser/hdbview/core/HDBViewParser.java
// Generated from com/codbex/kronos/parser/hdbview/core/HDBView.g4 by ANTLR 4.13.2
package com.codbex.kronos.parser.hdbview.core;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HDBViewParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9, BOOLEAN = 10,
            STRING = 11, EQ = 12, SEMICOLON = 13, WS = 14, ESC = 15, LINE_COMMENT = 16, COMMENT = 17;
    public static final int RULE_hdbViewDefinition = 0, RULE_property = 1, RULE_schemaProp = 2, RULE_publicProp = 3, RULE_queryProp = 4,
            RULE_dependsOnProp = 5, RULE_dependsOnTable = 6, RULE_dependsOnView = 7;

    private static String[] makeRuleNames() {
        return new String[] {"hdbViewDefinition", "property", "schemaProp", "publicProp", "queryProp", "dependsOnProp", "dependsOnTable",
                "dependsOnView"};
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {null, "'schema'", "'public'", "'query'", "'depends_on'", "'['", "','", "']'", "'depends_on_table'",
                "'depends_on_view'", null, null, "'='", "';'"};
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {null, null, null, null, null, null, null, null, null, null, "BOOLEAN", "STRING", "EQ", "SEMICOLON", "WS",
                "ESC", "LINE_COMMENT", "COMMENT"};
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "HDBView.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public HDBViewParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class HdbViewDefinitionContext extends ParserRuleContext {
        public List<PropertyContext> property() {
            return getRuleContexts(PropertyContext.class);
        }

        public PropertyContext property(int i) {
            return getRuleContext(PropertyContext.class, i);
        }

        public HdbViewDefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_hdbViewDefinition;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).enterHdbViewDefinition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).exitHdbViewDefinition(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HDBViewVisitor)
                return ((HDBViewVisitor<? extends T>) visitor).visitHdbViewDefinition(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final HdbViewDefinitionContext hdbViewDefinition() throws RecognitionException {
        HdbViewDefinitionContext _localctx = new HdbViewDefinitionContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_hdbViewDefinition);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(17);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(16);
                            property();
                        }
                    }
                    setState(19);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 798L) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PropertyContext extends ParserRuleContext {
        public SchemaPropContext schemaProp() {
            return getRuleContext(SchemaPropContext.class, 0);
        }

        public PublicPropContext publicProp() {
            return getRuleContext(PublicPropContext.class, 0);
        }

        public QueryPropContext queryProp() {
            return getRuleContext(QueryPropContext.class, 0);
        }

        public DependsOnPropContext dependsOnProp() {
            return getRuleContext(DependsOnPropContext.class, 0);
        }

        public DependsOnTableContext dependsOnTable() {
            return getRuleContext(DependsOnTableContext.class, 0);
        }

        public DependsOnViewContext dependsOnView() {
            return getRuleContext(DependsOnViewContext.class, 0);
        }

        public PropertyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_property;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).enterProperty(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).exitProperty(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HDBViewVisitor)
                return ((HDBViewVisitor<? extends T>) visitor).visitProperty(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final PropertyContext property() throws RecognitionException {
        PropertyContext _localctx = new PropertyContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_property);
        try {
            setState(27);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                    enterOuterAlt(_localctx, 1); {
                    setState(21);
                    schemaProp();
                }
                    break;
                case T__1:
                    enterOuterAlt(_localctx, 2); {
                    setState(22);
                    publicProp();
                }
                    break;
                case T__2:
                    enterOuterAlt(_localctx, 3); {
                    setState(23);
                    queryProp();
                }
                    break;
                case T__3:
                    enterOuterAlt(_localctx, 4); {
                    setState(24);
                    dependsOnProp();
                }
                    break;
                case T__7:
                    enterOuterAlt(_localctx, 5); {
                    setState(25);
                    dependsOnTable();
                }
                    break;
                case T__8:
                    enterOuterAlt(_localctx, 6); {
                    setState(26);
                    dependsOnView();
                }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SchemaPropContext extends ParserRuleContext {
        public TerminalNode EQ() {
            return getToken(HDBViewParser.EQ, 0);
        }

        public TerminalNode STRING() {
            return getToken(HDBViewParser.STRING, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(HDBViewParser.SEMICOLON, 0);
        }

        public SchemaPropContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_schemaProp;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).enterSchemaProp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).exitSchemaProp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HDBViewVisitor)
                return ((HDBViewVisitor<? extends T>) visitor).visitSchemaProp(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final SchemaPropContext schemaProp() throws RecognitionException {
        SchemaPropContext _localctx = new SchemaPropContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_schemaProp);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(29);
                match(T__0);
                setState(30);
                match(EQ);
                setState(31);
                match(STRING);
                setState(32);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PublicPropContext extends ParserRuleContext {
        public TerminalNode EQ() {
            return getToken(HDBViewParser.EQ, 0);
        }

        public TerminalNode BOOLEAN() {
            return getToken(HDBViewParser.BOOLEAN, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(HDBViewParser.SEMICOLON, 0);
        }

        public PublicPropContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_publicProp;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).enterPublicProp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).exitPublicProp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HDBViewVisitor)
                return ((HDBViewVisitor<? extends T>) visitor).visitPublicProp(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final PublicPropContext publicProp() throws RecognitionException {
        PublicPropContext _localctx = new PublicPropContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_publicProp);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(34);
                match(T__1);
                setState(35);
                match(EQ);
                setState(36);
                match(BOOLEAN);
                setState(37);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class QueryPropContext extends ParserRuleContext {
        public TerminalNode EQ() {
            return getToken(HDBViewParser.EQ, 0);
        }

        public TerminalNode STRING() {
            return getToken(HDBViewParser.STRING, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(HDBViewParser.SEMICOLON, 0);
        }

        public QueryPropContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_queryProp;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).enterQueryProp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).exitQueryProp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HDBViewVisitor)
                return ((HDBViewVisitor<? extends T>) visitor).visitQueryProp(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final QueryPropContext queryProp() throws RecognitionException {
        QueryPropContext _localctx = new QueryPropContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_queryProp);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(39);
                match(T__2);
                setState(40);
                match(EQ);
                setState(41);
                match(STRING);
                setState(42);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DependsOnPropContext extends ParserRuleContext {
        public TerminalNode EQ() {
            return getToken(HDBViewParser.EQ, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(HDBViewParser.SEMICOLON, 0);
        }

        public List<TerminalNode> STRING() {
            return getTokens(HDBViewParser.STRING);
        }

        public TerminalNode STRING(int i) {
            return getToken(HDBViewParser.STRING, i);
        }

        public DependsOnPropContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dependsOnProp;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).enterDependsOnProp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).exitDependsOnProp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HDBViewVisitor)
                return ((HDBViewVisitor<? extends T>) visitor).visitDependsOnProp(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final DependsOnPropContext dependsOnProp() throws RecognitionException {
        DependsOnPropContext _localctx = new DependsOnPropContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_dependsOnProp);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(44);
                match(T__3);
                setState(45);
                match(EQ);
                setState(46);
                match(T__4);
                setState(55);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == STRING) {
                    {
                        setState(47);
                        match(STRING);
                        setState(52);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__5) {
                            {
                                {
                                    setState(48);
                                    match(T__5);
                                    setState(49);
                                    match(STRING);
                                }
                            }
                            setState(54);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(57);
                match(T__6);
                setState(58);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DependsOnTableContext extends ParserRuleContext {
        public TerminalNode EQ() {
            return getToken(HDBViewParser.EQ, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(HDBViewParser.SEMICOLON, 0);
        }

        public List<TerminalNode> STRING() {
            return getTokens(HDBViewParser.STRING);
        }

        public TerminalNode STRING(int i) {
            return getToken(HDBViewParser.STRING, i);
        }

        public DependsOnTableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dependsOnTable;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).enterDependsOnTable(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).exitDependsOnTable(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HDBViewVisitor)
                return ((HDBViewVisitor<? extends T>) visitor).visitDependsOnTable(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final DependsOnTableContext dependsOnTable() throws RecognitionException {
        DependsOnTableContext _localctx = new DependsOnTableContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_dependsOnTable);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                match(T__7);
                setState(61);
                match(EQ);
                setState(62);
                match(T__4);
                setState(71);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == STRING) {
                    {
                        setState(63);
                        match(STRING);
                        setState(68);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__5) {
                            {
                                {
                                    setState(64);
                                    match(T__5);
                                    setState(65);
                                    match(STRING);
                                }
                            }
                            setState(70);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(73);
                match(T__6);
                setState(74);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DependsOnViewContext extends ParserRuleContext {
        public TerminalNode EQ() {
            return getToken(HDBViewParser.EQ, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(HDBViewParser.SEMICOLON, 0);
        }

        public List<TerminalNode> STRING() {
            return getTokens(HDBViewParser.STRING);
        }

        public TerminalNode STRING(int i) {
            return getToken(HDBViewParser.STRING, i);
        }

        public DependsOnViewContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dependsOnView;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).enterDependsOnView(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HDBViewListener)
                ((HDBViewListener) listener).exitDependsOnView(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HDBViewVisitor)
                return ((HDBViewVisitor<? extends T>) visitor).visitDependsOnView(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final DependsOnViewContext dependsOnView() throws RecognitionException {
        DependsOnViewContext _localctx = new DependsOnViewContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_dependsOnView);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                match(T__8);
                setState(77);
                match(EQ);
                setState(78);
                match(T__4);
                setState(87);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == STRING) {
                    {
                        setState(79);
                        match(STRING);
                        setState(84);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__5) {
                            {
                                {
                                    setState(80);
                                    match(T__5);
                                    setState(81);
                                    match(STRING);
                                }
                            }
                            setState(86);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(89);
                match(T__6);
                setState(90);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static final ATN _ATN = new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }
}
